--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -2,9 +2,45 @@ body {
   font-family: Helvetica;
 }
 
-#root {
-  height: 100vh;
+#root > div{
+  min-height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.left-side {
+  background-color: blue;
+  flex:0 0 60%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .search{
+    padding: 8px;
+    margin: 3rem auto;
+    height: 80px;
+    width:95%;
+    i{
+      float:right;
+      font-size: 50px;
+      color:grey;
+    }
+  }
+  .gif {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-grow: 1;
+    margin: auto;
+    align-items: center;
+    img{
+      max-width:400px;
+    }
+  }
+}
+
+.right-side {
+  background-color: red;
+  flex:0 0 40%;
+  img{
+    max-width:200px;
+  }
 }
